fix input label alignment

--- a/projectforge-webapp/src/components/design/input/Input.module.scss
+++ b/projectforge-webapp/src/components/design/input/Input.module.scss
@@ -42,6 +42,7 @@
     .text {
       position: absolute;
       left: 15px;
+      top: 0;
       @include transition-transform-extra(.3s, translate(2px, 1em) scale(1, 1), color .3s);
       transform-origin: top left;
       color: #7a7a7a;
